--- a/Synchronized.Repository/Synchronized.Repository.csproj
+++ b/Synchronized.Repository/Synchronized.Repository.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
-    <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Model.csproj" />
+    <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Domain.csproj" />
     <ProjectReference Include="..\Synchronized.Data\Synchronized.Data.csproj" />
   </ItemGroup>
 
