Added structuremap, Added QuestionsViewModel, Added Vote per user support, Added new Method VoteUpPost, Added persistency support in javascript, Added generic class ViewModel in javascript

--- a/Synchronized.Core/Synchronized.Core.csproj
+++ b/Synchronized.Core/Synchronized.Core.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Synchronized.ViewModel\Synchronized.ViewModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="1.4.0" />
+  </ItemGroup>
+
 </Project>
