--- a/Synchronized.DataModel/Synchronized.Domain.csproj
+++ b/Synchronized.DataModel/Synchronized.Domain.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
+    <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
   </ItemGroup>
 
 </Project>
