--- a/Controllers/Synchronized.Controllers.csproj
+++ b/Controllers/Synchronized.Controllers.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
+    <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.Core\Synchronized.Core.csproj" />
   </ItemGroup>
 
