--- a/Synchronized.Data/Synchronized.Data.csproj
+++ b/Synchronized.Data/Synchronized.Data.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
+    <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Domain.csproj" />
   </ItemGroup>
 
