--- a/Synchronized.WebApp/Synchronized.WebApp.csproj
+++ b/Synchronized.WebApp/Synchronized.WebApp.csproj
@@ -16,10 +16,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Controllers\Synchronized.Controllers.csproj" />
-    <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
+    <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.Core\Synchronized.Core.csproj" />
     <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Domain.csproj" />
     <ProjectReference Include="..\Synchronized.Data\Synchronized.Data.csproj" />
     <ProjectReference Include="..\Synchronized.Repository\Synchronized.Repository.csproj" />
+    <ProjectReference Include="..\Synchronized.ServiceModel\Synchronized.ServiceModel.csproj" />
   </ItemGroup>
 </Project>
