--- a/Synchronized.UI.Utilities/Synchronized.UI.Utilities.csproj
+++ b/Synchronized.UI.Utilities/Synchronized.UI.Utilities.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.ServiceModel\Synchronized.ServiceModel.csproj" />
+    <ProjectReference Include="..\Synchronized.ViewModelFactories\Synchronized.ViewModelFactories.csproj" />
     <ProjectReference Include="..\Synchronized.ViewModel\Synchronized.ViewModel.csproj" />
   </ItemGroup>
 
