--- a/Synchronized.Core.Utilities/Synchronized.Core.Utilities.csproj
+++ b/Synchronized.Core.Utilities/Synchronized.Core.Utilities.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.Core.Factories\Synchronized.Core.Factories.csproj" />
     <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Domain.csproj" />
+    <ProjectReference Include="..\Synchronized.Domain.Factories\Synchronized.Domain.Factories.csproj" />
     <ProjectReference Include="..\Synchronized.ServiceModel\Synchronized.ServiceModel.csproj" />
   </ItemGroup>
 
