--- a/Synchronized.Repository/Synchronized.Repository.csproj
+++ b/Synchronized.Repository/Synchronized.Repository.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\SharedLib\Synchronized.SharedLib.csproj" />
     <ProjectReference Include="..\Synchronized.DataModel\Synchronized.Domain.csproj" />
     <ProjectReference Include="..\Synchronized.Data\Synchronized.Data.csproj" />
+    <ProjectReference Include="..\Synchronized.Domain.Factories\Synchronized.Domain.Factories.csproj" />
   </ItemGroup>
 
 </Project>
