--- a/Synchronized.WebApp/Synchronized.WebApp.csproj
+++ b/Synchronized.WebApp/Synchronized.WebApp.csproj
@@ -24,4 +24,7 @@
     <ProjectReference Include="..\Synchronized.ServiceModel\Synchronized.ServiceModel.csproj" />
     <ProjectReference Include="..\Synchronized.ViewService\Synchronized.ViewServices.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 </Project>
