Fix edit comment UI functionality

--- a/Synchronized.WebApp/Synchronized.WebApp.csproj
+++ b/Synchronized.WebApp/Synchronized.WebApp.csproj
@@ -4,7 +4,9 @@
     <UserSecretsId>aspnet-Synchronized.WebApp-2CBB3719-601E-411E-82D0-F82060605697</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6"><PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
+<Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
+</PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" PrivateAssets="All" />
     <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="2.0.0" />
